--- a/CaseHub/res/layout/fragment_navigation_drawer.xml
+++ b/CaseHub/res/layout/fragment_navigation_drawer.xml
@@ -6,4 +6,4 @@
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
     android:background="#cccc"
-    tools:context="com.crsiag.cwruhub.NavigationDrawerFragment" />
+    tools:context="com.casehub.MainActivity" />
