--- a/CaseHub/res/values/styles.xml
+++ b/CaseHub/res/values/styles.xml
@@ -5,4 +5,17 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!-- Scheduler -->
+    <style name="DayHeader" parent="android:Theme.Holo.Light.DarkActionBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:layout_marginLeft">6dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="DayView" parent="android:Theme.Holo.Light.DarkActionBar"></style>
+
 </resources>
