--- a/CaseHub/res/layout/fragment_schedule.xml
+++ b/CaseHub/res/layout/fragment_schedule.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout
         android:id="@+id/dayLabelsLinearLayout"
+        android:baselineAligned="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -22,122 +23,72 @@
 
         <RelativeLayout
             android:id="@+id/sundayHeaderRelativeLayout"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_weight="2" >
+            style="@style/DayHeaderRelativeLayout" >
 
             <TextView
                 android:id="@+id/sundayTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="6dp"
-                android:text="@string/sunday"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/dayMarkerView"
-                android:layout_width="fill_parent"
-                android:layout_height="2dp"
-                android:layout_alignParentBottom="true" />
+                style="@style/DayHeaderTextView"
+                android:text="@string/sunday" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/mondayHeaderRelativeLayout"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_weight="2" >
+            style="@style/DayHeaderRelativeLayout" >
 
             <TextView
                 android:id="@+id/mondayTextView"
-                style="@style/DayHeader"
+                style="@style/DayHeaderTextView"
                 android:text="@string/monday" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/tuesdayHeaderRelativeLayout"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_weight="2" >
+            style="@style/DayHeaderRelativeLayout" >
 
             <TextView
                 android:id="@+id/tuesdayTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="6dp"
-                android:text="@string/tuesday"
-                android:textStyle="bold" />
+                style="@style/DayHeaderTextView"
+                android:text="@string/tuesday" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/wednesdayHeaderRelativeLayout"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_weight="2" >
+            style="@style/DayHeaderRelativeLayout" >
 
             <TextView
                 android:id="@+id/wednesdayTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="6dp"
-                android:text="@string/wednesday"
-                android:textStyle="bold" />
+                style="@style/DayHeaderTextView"
+                android:text="@string/wednesday" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/thursdayHeaderRelativeLayout"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_weight="2" >
+            style="@style/DayHeaderRelativeLayout" >
 
             <TextView
                 android:id="@+id/thursdayTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="6dp"
-                android:text="@string/thursday"
-                android:textStyle="bold" />
+                style="@style/DayHeaderTextView"
+                android:text="@string/thursday" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/fridayHeaderRelativeLayout"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_weight="2" >
+            style="@style/DayHeaderRelativeLayout" >
 
             <TextView
                 android:id="@+id/fridayTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="6dp"
-                android:text="@string/friday"
-                android:textStyle="bold" />
+                style="@style/DayHeaderTextView"
+                android:text="@string/friday" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/saturdayHeaderRelativeLayout"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_weight="2" >
+            style="@style/DayHeaderRelativeLayout" >
 
             <TextView
                 android:id="@+id/saturdayTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="6dp"
-                android:text="@string/saturday"
-                android:textStyle="bold" />
+                style="@style/DayHeaderTextView"
+                android:text="@string/saturday" />
         </RelativeLayout>
     </LinearLayout>
 
@@ -180,43 +131,20 @@
                     android:padding="0dp" >
 
                     <TextView
-                        android:id="@+id/time6amTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="6dp"
-                        android:layout_marginTop="360dp"
-                        android:gravity="center"
-                        android:text="@string/time6am" />
-
-                    <TextView
                         android:id="@+id/time7amTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="6dp"
-                        android:layout_marginTop="420dp"
-                        android:gravity="center"
+                        style="@style/TimeTextView"
                         android:text="@string/time7am" />
 
                     <TextView
                         android:id="@+id/time8amTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="6dp"
-                        android:layout_marginTop="480dp"
-                        android:gravity="center"
+                        style="@style/TimeTextView"
+                        android:layout_marginTop="60dp"
                         android:text="@string/time8am" />
 
                     <TextView
                         android:id="@+id/time9amTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="6dp"
+                        style="@style/TimeTextView"
                         android:layout_marginTop="540dp"
-                        android:gravity="center"
                         android:text="@string/time9am" />
 
                     <TextView
