--- a/CaseHub/res/values/styles.xml
+++ b/CaseHub/res/values/styles.xml
@@ -30,6 +30,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_marginRight">6dp</item>
+        <item name="android:height">60dp</item>
         <item name="android:gravity">center</item>
     </style>
 
