--- a/CaseHub/res/layout/fragment_greenie.xml
+++ b/CaseHub/res/layout/fragment_greenie.xml
@@ -1,18 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
-    <fragment
-          android:id="@+id/map"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.MapFragment"/>
+    android:layout_height="match_parent"
+    android:layout_gravity="top" >
 
-    <TextView
-            android:id="@+id/section_label"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.MapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="top" />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#CCFFFFFF"
+        android:columnCount="2"
+        android:rowCount="2" >
+
+        <Spinner
+            android:id="@+id/routeSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:layout_gravity="fill_horizontal"
+            android:layout_row="0"
+            tools:listitem="@android:layout/simple_spinner_item" />
+
+        <Spinner
+            android:id="@+id/stopSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal"
+            android:layout_row="1"
+            tools:listitem="@android:layout/simple_spinner_item" />
+
+        <Button
+            android:id="@+id/locationButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_column="1"
+            android:layout_gravity="center_vertical"
+            android:layout_row="0"
+            android:layout_rowSpan="2"
+            android:contentDescription="My Location"
+            android:drawableTop="@drawable/maplocation"
+            tools:ignore="HardcodedText" />
+    </GridLayout>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="#CCFFFFFF"
+        android:columnCount="2"
+        android:useDefaultMargins="false" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginTop="3dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="8dp"
+            android:text="Next Bus: 1m, 2m, 3m"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/button1"
+            style="android:borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:background="@drawable/stardark"
+            android:gravity="center_vertical|center_horizontal"
+            android:minWidth="48dip"
+            tools:ignore="HardcodedText" />
+
+    </GridLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
