--- a/CaseHub/res/layout/fragment_schedule.xml
+++ b/CaseHub/res/layout/fragment_schedule.xml
@@ -286,11 +286,10 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/currentTimeMarkerLinearLayout"
+                android:id="@+id/current_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="0dp"
-                android:layout_marginTop="100dp"
                 android:baselineAligned="false"
                 android:orientation="horizontal"
                 android:padding="0dp" >
@@ -301,7 +300,7 @@
                     android:layout_weight="1" />
 
                 <View
-                    android:id="@+id/currentTimeLineView"
+                    android:id="@+id/current_time_line"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_weight="14"
