--- a/CaseHub/res/layout/fragment_greenie.xml
+++ b/CaseHub/res/layout/fragment_greenie.xml
@@ -58,7 +58,7 @@
         android:useDefaultMargins="false" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/predictions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -70,7 +70,7 @@
             tools:ignore="HardcodedText" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/fav"
             style="android:borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -81,9 +81,5 @@
             tools:ignore="HardcodedText" />
 
     </GridLayout>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </FrameLayout>
