--- a/CaseHub/res/values/colors.xml
+++ b/CaseHub/res/values/colors.xml
@@ -10,6 +10,12 @@
     <color name="border">#626262</color>
     <color name="highlight">#135a90</color>
     
-    <color name="event1">#ff4444</color>
+    <color name="event1">#FF7575</color>
+    <color name="event2">#FFCC66</color>
+    <color name="event3">#ff4444</color>
+    <color name="event4">#ff4444</color>
+    <color name="event5">#ff4444</color>
+    <color name="event6">#ff4444</color>
+    <color name="event7">#ff4444</color>
 
 </resources>
