--- a/CaseHub/res/layout/dialog_login.xml
+++ b/CaseHub/res/layout/dialog_login.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
+    <ProgressBar
+        android:id="@+id/login_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
     
     <EditText
         android:id="@+id/username"
